# mcp-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt  script.py
api/: client.py  conversations.db  debug_mcp_api.py  main.py  mcp_client.py  sticky_notes.db
api/conversations/memory/: Redis_test.py  conversational_memory.py
api/memory/: redis_memory.py  sqlite_memory.py
api/tool_results/: result_20250807_081753.txt  result_20250807_081826.txt
api/utils/: chat_handler.py  prompt_parser.py  router.py  session_manager.py  simple_router.py
frontend/: chatbot.py  main.py
server/: mcp_server_gemini.py  server.py
