[project]
name = "mcp-client2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.60.0",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "mcp>=1.12.3",
    "python-dotenv>=1.1.1",
]
